# Ch-aOS

./: .chaos.yml  .gitignore  .gitmodules  404.html  CONTRIBUTING.md  README.md  READMEpt_BR.md  SECURITY.md  chaos_pubkey.asc  index.html  install.sh  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  uninstall.sh
.github/workflows/: docs.yml
Advanced/SDK/Reference/apply/core/: index.html
Advanced/SDK/Reference/apply/payloads/: index.html
Advanced/SDK/Reference/boats/core/: index.html
Advanced/SDK/Reference/check/core/: index.html
Advanced/SDK/Reference/check/payloads/: index.html
Advanced/SDK/Reference/common/payloads/: index.html
Advanced/SDK/Reference/explain/core/: index.html
Advanced/SDK/Reference/explain/payloads/: index.html
Advanced/SDK/fleet/: index.html
Advanced/SDK/interfaces_and_flags/: index.html
Advanced/SDK/orchestration/: index.html
Advanced/SDK/overview/: index.html
Advanced/SDK/ramble/: index.html
Advanced/SDK/secrets/: index.html
Advanced/boats/: index.html
Advanced/composability/: index.html
Advanced/connectors/: index.html
Advanced/fleet/: index.html
Advanced/logbook/: index.html
Advanced/providers/: index.html
Ch-obolos/dex/: custom-plug-dex.yml  dex-migrating.yml  example_pyinfra.py  example_pyinfra_non_API.py
Ch-obolos/dex/region/: region.yml
Commands/apply/: index.html
Commands/explain/: index.html
Commands/management/: index.html
Commands/ramble/: index.html
Commands/secrets/: index.html
Commands/styx/: index.html
Commands/team/: index.html
Plugins/connectors/: index.html
Plugins/development/: index.html
Plugins/limani/: index.html
Plugins/provider-plugins/: index.html
Plugins/roles/: index.html
Plugins/styx/: index.html
Souls/connectors/: index.html
Souls/development/: index.html
Souls/limani/: index.html
Souls/provider-plugins/: index.html
Souls/roles/: index.html
Souls/styx/: index.html
advanced/boats/: index.html
advanced/composability/: index.html
advanced/connectors/: index.html
advanced/fleet/: index.html
advanced/logbook/: index.html
advanced/providers/: index.html
chaos/dev/: sops-config.yml
chopping-board/: index.html
cli/: build.sh  chaos_logbook.json  chaos_report.json  pyproject.toml  requirements.txt
cli/src/chaos/: cli.py  install.sh
cli/src/chaos/lib/: __init__.py  apply.py  args.py  backlog.md  checkers.py  database.py  display_utils.py  explain.py  handlers.py  inits.py  pelago.py  plugDiscovery.py  ramble.py  secrets.py  set.py  styx.py  team.py  teamUtils.py  telemetry.py  tinyScript.py  utils.py
cli/src/chaos/lib/args/: args.py  dataclasses.py  types.py
cli/src/chaos/lib/args/commands/: apply.py  check.py  explain.py  extras.py  init.py  ramble.py  secrets.py  set.py  styx.py  team.py
cli/src/chaos/lib/boats/: base.py  paperBoat.py  test.py
cli/src/chaos/lib/explanations/apply/: apply.py
cli/src/chaos/lib/explanations/chaos/: chaos.py
cli/src/chaos/lib/explanations/myself/: myself.py
cli/src/chaos/lib/explanations/ramble/: ramble.py
cli/src/chaos/lib/explanations/secrets/: secrets.py
cli/src/chaos/lib/explanations/team/: team.py
cli/src/chaos/lib/facts/: facts.py
cli/src/chaos/lib/isles/: isle.py
cli/src/chaos/lib/limani/: chrima.py  limani.py
cli/src/chaos/lib/roles/: role.py
cli/src/chaos/lib/secret_backends/: age.py  base.py  bitwarden.py  bw.py  bws.py  crypto.py  ephemeral.py  onepassword.py  op.py  pgp.py  utils.py  vault.py
cli/src/chaos/lib/secret_backends/key_backends/: age.py  backend.py  factory.py  pgp.py  vault.py
cli/src/chaos/lib/secret_backends/providers/: base.py  bitwarden.py  doppler.py  ephemeral.py  infisical.py  onepassword.py
cli/src/chaos/lib/templates/: fleet.py
cli/src/charonte/: cli.py
cli/tests/: test_explain.py  test_ramble.py
commands/apply/: index.html
commands/explain/: index.html
commands/management/: index.html
commands/ramble/: index.html
commands/secrets/: index.html
commands/styx/: index.html
commands/team/: index.html
core-concepts/: index.html
docs/: chopping-board.md  core-concepts.md  getting-started.md  glossary.md  index.md
docs/Advanced/: boats.md  composability.md  connectors.md  fleet.md  logbook.md  providers.md
docs/Advanced/SDK/: fleet.md  interfaces_and_flags.md  orchestration.md  overview.md  ramble.md  secrets.md
docs/Commands/: apply.md  explain.md  management.md  ramble.md  secrets.md  styx.md
docs/Plugins/: development.md  limani.md  provider-plugins.md  roles.md  styx.md
docs/Souls/: connectors.md  development.md  limani.md  provider-plugins.md  roles.md  styx.md
docs/advanced/: boats.md  composability.md  connectors.md  fleet.md  logbook.md  providers.md  telemetry.md
docs/commands/: apply.md  explain.md  management.md  ramble.md  secrets.md  styx.md  team.md
docs/plugins/: connectors.md  development.md  limani.md  provider-plugins.md  roles.md  styx.md
external_plugins/chaos-proxmox/: pyproject.toml  requirements.txt
external_plugins/chaos-proxmox/src/isles/: proxmox.py
external_plugins/charonte-mock-plugin/: pyproject.toml
getting-started/: index.html
glossary/: index.html
old-roles-torefac/: README.md
plugins/connectors/: index.html
plugins/development/: index.html
plugins/limani/: index.html
plugins/provider-plugins/: index.html
plugins/roles/: index.html
plugins/styx/: index.html
roles/: README.md
roles/pkgs/tasks/: pkgs.py
search/: search_index.json
src/charonte/: cli.py  pyproject.toml
(+44 files in other folders)
