[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos"
version = "0.1.0"
description = "Declarative OS configuration manager"
readme = "README.md"
requires-python = ">=3.11,<=3.13.11"
dependencies = [
    "pyinfra",
    "pynacl>=1.6.2",
    "omegaconf",
    "urllib3>=2.6.3",
    "passlib",
    "argcomplete",
    "rich",
    "hvac",
    "requests",
    "gitpython",
    "greenlet",
    "zope.event",
    "zope.interface",
    "gevent",
    "MarkupSafe",
    "cffi",
    "PyYAML",
    "charset_normalizer",
]

[project.scripts]
chaos = "chaos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points."chaos.explain"]
chaos = "chaos.lib.explanations.chaos.chaos:ChaosExplain"
secrets = "chaos.lib.explanations.secrets.secrets:SecretsExplain"
ramble = "chaos.lib.explanations.ramble.ramble:RambleExplain"
team = "chaos.lib.explanations.team.team:TeamExplain"
apply = "chaos.lib.explanations.apply.apply:ApplyExplain"
yourself = "chaos.lib.explanations.myself.myself:ExplainMyself"

[project.entry-points."chaos.providers"]
bitwarden = "chaos.lib.secret_backends.bitwarden:BitwardenPasswordProvider"
bitwarden-secrets = "chaos.lib.secret_backends.bitwarden:BitwardenSecretsProvider"
bitwarden-rbw = "chaos.lib.secret_backends.bitwarden:BitwardenRbwProvider"
onepassword = "chaos.lib.secret_backends.onepassword:OnePasswordProvider"

