[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos"
version = "0.7.0"
description = "Declarative OS configuration manager"
readme = "README.md"
requires-python = ">=3.11,<=3.14.3"
dependencies = [
    "pyinfra>=3.7",
    "pynacl>=1.6.2",
    "omegaconf",
    "urllib3>=2.6.3",
    "cryptography>=46.0.7",
    "passlib",
    "argcomplete",
    "rich",
    "requests>=2.33.0",
    "pip>=26.0",
    "greenlet",
    "zope.event",
    "zope.interface",
    "gevent",
    "MarkupSafe",
    "Pygments>=2.20.0",
    "cffi",
    "PyYAML",
    "charset_normalizer",
    "psutil",
]

[project.optional-dependencies]
build = ["shiv"]

[project.scripts]
chaos = "chaos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points."chaos.explain"]
chaos = "chaos.lib.explanations.chaos.chaos:ChaosExplain"
secrets = "chaos.lib.explanations.secrets.secrets:SecretsExplain"
ramble = "chaos.lib.explanations.ramble.ramble:RambleExplain"
team = "chaos.lib.explanations.team.team:TeamExplain"
apply = "chaos.lib.explanations.apply.apply:ApplyExplain"
yourself = "chaos.lib.explanations.myself.myself:ExplainMyself"

[project.entry-points."chaos.providers"]
bitwarden = "chaos.lib.secret_backends.providers.bitwarden:BitwardenPasswordProvider"
bitwarden-secrets = "chaos.lib.secret_backends.providers.bitwarden:BitwardenSecretsProvider"
bitwarden-rbw = "chaos.lib.secret_backends.providers.bitwarden:BitwardenRbwProvider"
onepassword = "chaos.lib.secret_backends.providers.onepassword:OnePasswordProvider"

[project.entry-points."chaos.limanis"]
chrima = "chaos.lib.limani.chrima:Chrima"

[project.entry-points."chaos.keys"]
fleet = "chaos.lib.templates.fleet:fleet"
